@startuml
'https://plantuml.com/class-diagram
class Company {
    -String company_id
    -String company_name
    -ArrayList<Dealership> list_dealerships

    +add_dealership()
    +get_list_dealerships()
    +find_dealership()

}

class Dealership {
    -String dealer_id
    -ArrayList<Vehicle> list_cars
    -boolean receiving_vehicle

     +add_incoming_vehicle()
     +enable_receiving_vehicle()
     +disable_receiving_vehicle()
     +get_dealership_status()
     +get_list_cars()
}

abstract class Vehicle{
    String vehicle_id
    String vehicle_manufacturer
    String vehicle_model
    double vehicle_price
    Date acquisition_date
    protected void setVehicleType(String vehicle_type)
}

class SUV extends Vehicle
{
    SUV(){setVehicleType("SUV")}
}
class Sedan extends Vehicle
{
    Sedan(){setVehicleType("Sedan")}
}
class Pickup extends Vehicle
{
    Pickup(){setVehicleType("Pickup)}
}
class Sports_Car extends Vehicle
{
    Sports_Car(){setVehicleType("Sports_Car")}
}

Dealership "1" --> "*" Vehicle
Company "1" --> "*" Dealership
@enduml